# sqlite-fastapi-container

./: Dockerfile  LICENSE  database.db  pyproject.toml
.devcontainer/: devcontainer.json
sqlite/: main.py
